# TensorRT-YOLOv8

./: .gitignore
C++/: CMakeLists.txt  chouzhen.cpp  main.cpp  main_stream.cpp
C++/detect/: CMakeLists.txt  main-mysql.cpp  main-redis.cpp  main-restapi.cpp  main.cpp
C++/detect/include/: config.h
C++/origin_version/detect_origin_version/: trt_infer.cpp
python/detect/: config.py  yolov8-detect-server.py  yolov8_test.py
python/video_util/: extract_audio.py  ffepmg_send_remote.py  receive_video_bytes.py  send_video_bytes.py
